Uploaded image for project: 'Apache HAWQ'
  1. Apache HAWQ
  2. HAWQ-108

Allocated memory space for saving preferred host information is not freed.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 2.0.0.0-incubating
    • None
    • None

    Description

      In YARN mode resource broker, allocated memory space for saving preferred host information is not freed if YARN is not available.

      Attachments

        Activity

          People

            yjin Yi Jin
            yjin Yi Jin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: