HAWQ-108. Allocated memory space for saving preferred host information is not freed